# python-playground

./: .gitignore  README.md  Redis_compose.yml  benchm.py  cpu_bound_comp.py  encrypt_and_decrypt_data.py  faker_fake_data.py  gen_ssh.py  image_downloader.py  learn_multiprocessing.py  learn_threding.py  libraray.py  list_single_element_finder.py  map_func.py  mongo_crud.py  perfcounter_decorator.py  pymongo_async.py  pyproject.toml  queue_consumer.py  queue_producer.py  redisplay.py  sender.py
code_practice/: decorators.py
datetime_parser/: __init__.py  datetime_parser.py  usage_examples.py  usage_examples_2.py
modules/: EMQX_README.md  EMXQ_MQTT.py  LOGGER_README.md  MONGO_UTIL_README.md  RABBITMQ_README.md  REDIS_UTIL_README.md  RabbitMQQueue_play.py  Timeit.py  csv_2_json.py  enc_dec.py  enc_dec_back.py  logger.py  pymongo_claude.py  pymongo_sync.py  receiver.py  redis_hash_util.py  redis_util.py  s3_operations.py
modules/MongoDB/: MONGO_UTIL_README.md  mongo_util.py
modules/Redis/: REDIS_UTIL_README.md  dead_redis_util.py  redis_core_util.py
modules/datetime_parser/: DATETIME_PARSER_README.md  datetime_parser.py  usage_examples.py  usage_examples_2.py
modules/s3/: S3_UTIL_README.md  __init__.py  s3_operations.py  s3_util.py
multiprocessing_and_multiprocessing/: MULTIPROCESSING_AND_THREADING_README.md  io_bound_comp.py
