[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "pymongo>=4.13.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
